[package]
name = "xmva"
version = "1.0.0"
edition = "2024"

[dependencies]
backtrace = "0.3.75"
clap = { version = "4.5.38", features = ["derive"] }
color-backtrace = "0.7.0"
colored = "3.0.0"
either = "1.15.0"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_spanned = { version = "0.6.8", features = ["serde"] }
serde_with = "3.12.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
toml = { version = "0.8.22", features = ["preserve_order"] }
